--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,6 @@
 <body>
 <div id="root">
   <button type="button" id="click">Click Me!</button>
+  <p id="para">Hello, I've learnt to use the full-stack evaluation tool. This makes me so happy</p>
 </div>
 </html>
