--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 <title>React Boilerplate</title>
 </head>
 <body>
-<div id="root">
+<div class="exp" id="root">
   <button type="button" id="click">Click Me!</button>
   <p id="para">Hello, I've learnt to use the full-stack evaluation tool. This makes me so happy</p>
 </div>
