--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="exp" id="root">
-  <button type="button" id="click">Click Me!</button>
+  <button id="click" type="button">Click Me!</button>
   <p id="para">Hello, I've learnt to use the full-stack evaluation tool. This makes me so happy</p>
 </div>
 </html>
